Fix backend API path URL encoding